Fix deprecated Integer/Long/Boolean constructors to clean up compiler warnings