@@ -60,7 +60,7 @@ public class TimestampUserType implements UserType, LiteralType<Date>, Serializa
 	public int hashCode(Object o) 
 	throws HibernateException {
 		java.util.Date ts = (Date) o;
-		return new Long(ts.getTime() / 1000).hashCode();
+		return Long.valueOf(ts.getTime() / 1000).hashCode();
 	}
 
 	@Override
